--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://ast-engineering.join.com/jobs/456721-devops-engineer-m-w-d'>Job @ AST Engineering  (Ottobrunn): DevOps Enginee... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=owasbfw3&__jvst=Employee&__jvsd=sKAZ2gw6&__jvsc=Twitter&bid=nuqlqMwW'>Forescout Technologies Inc. Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -54,11 +58,11 @@
 <p><span class="badge badge-light">Boston United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://orbitpeople.applytojob.com/apply/LIkyCEjfL7/Devops-Operational-Support'>Devops Operational Support - Orb IT People - Career Page</a></h5> 
+<h5><a href='http://orbitpeople.applytojob.com/apply/LIkyCEjfL7/Devops-Operational-Support'>Devops Operational Support - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=soBeegwc&__jvsc=Twitter&bid=nINhqMwt'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -128,7 +132,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
+<h5><a href='http://ovhus.applytojob.com/apply/U3phWEytzM/Cloud-Engineer-DevOps-OpenStack-Auotmation-Development'>Cloud Engineer - DevOps (OpenStack / Auotmation / Development) - OVHcloud - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,7 +206,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/ccb94ac3-e1eb-4574-afad-9e635b164ed8'>Labelbox - DevOps Engineer On-Prem</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -222,7 +226,7 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/leEDB4ggfx/Devops-Engineer'>Devops Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/leEDB4ggfx/Devops-Engineer'>Devops Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -284,7 +288,7 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -451,17 +455,13 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://abcfinlab.join.com/jobs/448535-devops-engineer-m-w-x'>Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN</a></h5> 
-<p><span class="badge badge-light">Cologne Cologne</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
